log
Sat 06 May 2023 04:03:39 AM UTC: 
 tests:  0|5
total_score: 0/70
4e058c2
Sat 06 May 2023 05:13:12 AM UTC: 
 sudoku.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:21: error: implicit declaration of function ‘addElement’ [-Werror=implicit-function-declaration]
   61 |                     addElement(list, new_node);
      |                     ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b34a77
Sat 06 May 2023 05:15:03 AM UTC: 
 sudoku.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:21: error: implicit declaration of function ‘appent’ [-Werror=implicit-function-declaration]
   64 |                     appent(list, new_node);
      |                     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4c236ee
Sat 06 May 2023 05:16:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:21: error: implicit declaration of function ‘addElement’ [-Werror=implicit-function-declaration]
   64 |                     addElement(list, new_node);
      |                     ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f789ac3
Sat 06 May 2023 05:17:31 AM UTC: 
 sudoku.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:16: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   60 |                append(list, new_node);
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2850c93
Sat 06 May 2023 05:21:34 AM UTC: 
 sudoku.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  2|4
total_score: 15/70
6ba406a
